--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,8 @@
             "styles": [
               "src/styles.css",
               "node_modules/primeng/resources/themes/saga-blue/theme.css",
-              "node_modules/primeng/resources/primeng.min.css"
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/aos/dist/aos.css"
             ],
             "scripts": []
           },
@@ -95,8 +96,8 @@
             "styles": [
               "src/styles.css",
                   "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
-
-              "node_modules/primeng/resources/primeng.min.css"
+                  "node_modules/primeng/resources/primeng.min.css",
+                  "node_modules/aos/dist/aos.css"              
             ],
             "scripts": ["node_modules/tinymce/tinymce.min.js"]
           }
