--- a/package.json
+++ b/package.json
@@ -21,21 +21,27 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@tinymce/tinymce-angular": "^7.0.0",
+    "aos": "^2.3.4",
+    "exceljs": "^4.3.0",
     "material-icons": "^1.11.11",
     "ng2-pdf-viewer": "^9.1.2",
     "ngx-cookie-service": "^14.0.1",
+    "ngx-infinite-scroll": "^14.0.1",
     "primeicons": "^6.0.1",
     "primeng": "^14.0.0",
     "quill": "^1.3.7",
     "rxjs": "~7.5.0",
+    "ts-xlsx": "0.0.11",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.1",
     "@angular/cli": "~14.0.1",
     "@angular/compiler-cli": "^14.0.0",
+    "@types/aos": "^3.0.4",
     "@types/jasmine": "~4.0.0",
     "@types/uuid": "^8.3.4",
     "jasmine-core": "~4.1.0",
